[package]
name = "docs_rs_headers"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/rust-lang/docs.rs"
edition = "2024"

[features]
testing = []

[dependencies]
anyhow = { workspace = true }
askama = { workspace = true }
docs_rs_types = { path = "../docs_rs_types" }
docs_rs_uri = { path = "../docs_rs_uri" }
headers = "0.4.1"
http = { workspace = true }
itertools = { workspace = true }
md5 = "0.8.0"
serde = { workspace = true }

[dev-dependencies]
axum-core = "0.5.5"
axum-extra = { workspace = true }
serde_json = { workspace = true }
test-case = { workspace = true }
tokio = { workspace = true }
