[package]
name = "docs_rs_opentelemetry"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
docs_rs_env_vars = { path = "../docs_rs_env_vars" }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-resource-detectors = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
