[package]
name = "docs_rs_rustdoc_json"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
docs_rs_types = { path = "../docs_rs_types" }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
