[package]
name = "docs_rs_rustdoc_json"
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
docs_rs_types = { path = "../docs_rs_types" }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
