[package]
name = "docs_rs_storage"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-compression = { version = "0.4.32", features = ["tokio", "bzip2", "zstd", "gzip"] }
async-stream = { workspace = true }
aws-config = { version = "1.0.0", default-features = false, features = ["rt-tokio", "default-https-client"] }
aws-sdk-s3 = "1.3.0"
aws-smithy-types-convert = { version = "0.60.0", features = ["convert-chrono"] }
bzip2 = "0.6.0"
chrono = { workspace = true }
dashmap = "6.0.0"
docs_rs_database = { path = "../docs_rs_database" }
docs_rs_env_vars = { path = "../docs_rs_env_vars" }
docs_rs_headers = { path = "../docs_rs_headers" }
docs_rs_opentelemetry = { path = "../docs_rs_opentelemetry" }
docs_rs_utils = { path = "../docs_rs_utils" }
flate2 = "1.1.1"
futures-util = { workspace = true }
http = { workspace = true }
itertools = { workspace = true }
mime = { workspace = true }
opentelemetry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
zip = {version = "6.0.0", default-features = false, features = ["bzip2"]}
zstd = "0.13.0"

[dev-dependencies]
criterion = "0.8.0"
test-case = { workspace = true }


[[bench]]
name = "compression"
harness = false
