[package]
name = "docs_rs_storage"
license.workspace = true
repository.workspace = true
edition.workspace = true

[features]
testing = [
    "dep:rand",
    "dep:dashmap",
    "docs_rs_config/testing",
    "docs_rs_opentelemetry/testing",
]

[dependencies]
anyhow = { workspace = true }
async-compression = { version = "0.4.32", features = ["bzip2", "gzip", "tokio", "zstd"] }
async-stream = { workspace = true }
# The default `rustls` feature pulls in the legacy hyper 0.14 + rustls 0.21
# stack via `aws-smithy-runtime/tls-rustls`, which includes the vulnerable
# `rustls-webpki` v0.101.x. Using only `default-https-client` avoids this by
# using the modern rustls 0.23 + hyper 1.x stack instead.
aws-config = { version = "1.0.0", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-s3 = { version = "1.3.0", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-smithy-types-convert = { version = "0.60.0", features = ["convert-chrono"] }
base64 = { workspace = true }
bzip2 = "0.6.0"
chrono = { workspace = true }
crc32fast = "1.4.2"
dashmap = { version = "6.0.0", optional = true }
docs_rs_config = { path = "../docs_rs_config" }
docs_rs_env_vars = { path = "../docs_rs_env_vars" }
docs_rs_headers = { path = "../docs_rs_headers" }
docs_rs_mimes = { path = "../docs_rs_mimes" }
docs_rs_opentelemetry = { path = "../docs_rs_opentelemetry" }
docs_rs_rustdoc_json = { path = "../docs_rs_rustdoc_json" }
docs_rs_types = { path = "../docs_rs_types" }
docs_rs_utils = { path = "../docs_rs_utils" }
flate2 = "1.1.1"
futures-util = { workspace = true }
http = { workspace = true }
itertools = { workspace = true }
mime = { workspace = true }
moka = { version = "0.12.14", features = ["future"] }
opentelemetry = { workspace = true }
rand = { workspace = true, optional = true }
serde_json = { workspace = true }
sqlx = { workspace = true } # for sqlite
strum = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7.15", default-features = false, features = ["io-util"] }
tracing = { workspace = true }
walkdir = { workspace = true }
zip = { workspace = true }
zstd = "0.13.0"

[dev-dependencies]
criterion = { version = "0.8.0", features = ["async_tokio"] }
dashmap = "6.0.0"
docs_rs_config = { path = "../docs_rs_config", features = ["testing"] }
docs_rs_opentelemetry = { path = "../docs_rs_opentelemetry", features = ["testing"] }
rand = { workspace = true }
test-case = { workspace = true }

[[bench]]
name = "compression"
harness = false

[[bench]]
name = "archive_index_cache"
harness = false
required-features = ["testing"]

[[bench]]
name = "crc32"
harness = false

[lints]
workspace = true
