[package]
name = "docs_rs_test_fakes"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/rust-lang/docs.rs"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
docs_rs_builder = { path = "../../bin/docs_rs_builder" }
docs_rs_cargo_metadata = { path = "../docs_rs_cargo_metadata", features = ["testing"] }
docs_rs_database = { path = "../docs_rs_database" }
docs_rs_registry_api = { path = "../docs_rs_registry_api" }
docs_rs_storage = { path = "../docs_rs_storage" }
docs_rs_types = { path = "../docs_rs_types" }
sqlx = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }
